# mycroft-gui-qt5

./: .gitignore  CMakeLists.txt  README.md  dev_setup.sh  run.sh
application/: AboutPage.qml  CMakeLists.txt  Idler.qml  RemoteStt.qml  SettingsPage.qml  ai.ovos.gui-app.desktop  appsettings.cpp  appsettings.h  main.cpp  main.qml  qml.qrc
autotests/: CMakeLists.txt
icons/: CMakeLists.txt
import/: CMakeLists.txt  abstractdelegate.cpp  abstractdelegate.h  abstractskillview.cpp  audiorec.cpp  audiorec.h  coloroverlay.cpp  coloroverlay.h  globalsettings.cpp  globalsettings.h  mediaservice.cpp  mediaservice.h  mycroftcontroller.cpp  mycroftcontroller.h  mycroftplugin.cpp  plugins.qmltypes
import/mediaproviders/: audioproviderservice.cpp  audioproviderservice.h  audiostreamdevice.cpp  audiostreamdevice.h  videoproviderservice.cpp  videoproviderservice.h
import/qml/: AudioPlayer.qml  AutoFitLabel.qml  BoxLayout.qml  BusyIndicator.qml  CardDelegate.qml  Delegate.qml  MarqueeText.qml  PaginatedText.qml  ProportionalDelegate.qml  ScrollableDelegate.qml  SkillView.qml  SlideShow.qml  SlidingImage.qml  SoundEffects.qml  StatusIndicator.qml  Units.qml  VideoPlayer.qml
import/qml/private/: ImageBackground.qml
tests/: SkillViewTest.qml
